# task_management_system

./: .env.template  .env.template.tests  LICENSE  README.md  pyproject.toml  start.sh  start_tests.sh
docker/: Dockerfile  docker-compose-tests.yml  docker-compose.yml
src/: cache.py  main.py  project_celery.py
src/api/admin/: admin.py
src/api/admin/views/: auth.py  job.py  user.py
src/api/dependencies/: auth.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  job.py  user.py
src/configs/: config.py
src/constants/: email.py  roles.py
src/crud/: job.py  user.py
src/crud/crud_mixins/: create.py  read.py  update.py
src/databases/: database.py
src/databases/migrations/: env.py
src/databases/migrations/versions/: 2025_02_01_1923-cea8daccce28_add_model_user.py  2025_02_03_1910-23dbd14b9b59_add_model_job.py  2025_02_04_1804-8f1557cb0645_add_fields_for_jobs.py
src/models/: __init__.py  base.py  job.py  user.py
src/schemas/: job.py  password.py  user.py
src/services/: notification.py  user.py
src/tasks/: tasks.py
src/tests/: conftest.py
src/tests/fixtures/: __init__.py  job.py  user.py
src/tests/test_api/: test_job.py  test_user.py
src/utilities/: async_utils.py  email_client.py  exceptions.py  tokens.py
